--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,15 @@ minimal_mistakes_skin: "dark"
 title: one more blog
 title_seperator: "|"
 name: joeypiccola
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
