--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ tag_archive:
   type: liquid
   path: /tags/
 # https://github.com/jekyll/jekyll-archives
-jekyll-archives:
+# jekyll-archives:
 #   enabled:
 #     - categories
 #     - tags
