--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "things from here and there"
 title_separator          : "-"
 name                     : "Joey Piccola"
-description              : "A collection of automation, engineering and operational accomplishments."
+description              : "A collection of systems engineering and automation efforts."
 url                      : "https://www.joeypiccola.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "joeypiccola/joeypiccola.github.io"
